webserver1-dc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver1
  labels:
    web: one
spec:
  replicas: 3
  selector:
    matchLabels:
      app: webserver1
  template:
    metadata:
      labels:
        app: webserver1
        dp: canary
    spec:
      containers:
      - name: webserver1
        image: httpd # <-- APACHE IMAGE
        # LIFECYCLE DEFINITION START 
        lifecycle:
          postStart:
            exec:
              command: ["/bin/sh", "-c", "echo WebServer1_$HOSTNAME > htdocs/index.html"]
        # LIFECYCLE DEFINITION END
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: "64Mi"
            cpu: "100m"
