webserver2-dc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver2
  labels:
    app: webserver
spec:
  replicas: 3
  selector:
    matchLabels:
      app: webserver
  template:
    metadata:
      labels:
        app: webserver
    spec:
      containers:
      - name: webserver2
        image: httpd # <-- APACHE IMAGE
        # LIFECYCLE DEFINITION START 
        lifecycle:
          postStart:
            exec:
              command: ["/bin/sh", "-c", "echo WebServer2_$HOSTNAME > htdocs/hostname.html"]
        # LIFECYCLE DEFINITION END
        ports:
        - containerPort: 80
