webserver-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: webserver-svc
spec:
  selector:
    web: webserver
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: webserver-80
  type: NodePort
