webserver-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webserver-ing
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webserver-svc
            port:
              name: webserver-80
